[package]
name = "wintracer"
version = "0.1.0"
authors = ["bostjanv"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winapi = { version = "^0.3", features = ["winbase", "processthreadsapi", "debugapi", "memoryapi"] }
